[workspace]
resolver = "2"
members = [
    "frontend/ui",
    "frontend/web",
    "frontend/desktop",
    "frontend/mobile",
    "frontend/server",
    "shared",
    "backend",
    "shared"
]

[workspace.dependencies]
dioxus = { version = "0.6.0" }

# workspace
ui = { path = "frontend/ui" }
server = { path = "frontend/server" }
shared = { path = "shared" }
